--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -8,18 +8,16 @@ on:
   
 jobs:
 
-  build-artifactory-server:
+  build-websub-server:
     runs-on: ubuntu-latest
     env: 
       NAMESPACE: ${{ secrets. dev_namespace_docker_hub }}
-      SERVICE_NAME: artifactory-server
-      SERVICE_LOCATION: artifacts/
-
+      SERVICE_NAME: websub-server
+  
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
         
       - name: Setup branch and env 
         run: |
@@ -33,14 +31,13 @@ jobs:
           echo "GPG_TTY=$(tty)" >> $GITHUB_ENV
           echo "BRANCH_NAME=$(echo ${{ github.ref }} | sed -e 's,.*/\(.*\),\1,')" >> $GITHUB_ENV
       - name: Ballerina Build
-        uses: ballerina-platform/ballerina-action/@1.1.1
+        uses: ballerina-platform/ballerina-action/@master
         with:
           args:
             build
   
       - name: Build image
         run: |
-          cd "./${{env.SERVICE_LOCATION}}"
           docker build . --file Dockerfile --tag ${{ env.SERVICE_NAME }}
       
       - name: Log into registry
