--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -21,6 +21,7 @@ jobs:
       - uses: AdoptOpenJDK/install-jdk@v1
         with:
           version: '11'
+          target: 'JAVA_HOME'
           
       - name: Setup branch and env 
         run: |
