--- a/hub/Ballerina.toml
+++ b/hub/Ballerina.toml
@@ -1,7 +1,7 @@
 [package]
 org = "mosip"
-name = "hub"
-version = "1.2.0"
+name = "kafkaHub"
+version = "0.1.0"
 
 [build-options]
 observabilityIncluded = true
