--- a/consolidator/Ballerina.toml
+++ b/consolidator/Ballerina.toml
@@ -1,7 +1,7 @@
 [package]
 org = "mosip"
-name = "consolidator"
-version = "1.2.0"
+name = "consolidatorService"
+version = "0.1.0"
 
 [build-options]
 observabilityIncluded = true
