--- a/consolidator/Ballerina.toml
+++ b/consolidator/Ballerina.toml
@@ -8,3 +8,4 @@ observabilityIncluded = true
 
 [[platform.java11.dependency]] 
 path = "./javalibs/kafka-admin-client-0.0.1-SNAPSHOT.jar"
+modules = ["inittopic"]
