--- a/consolidator/Ballerina.toml
+++ b/consolidator/Ballerina.toml
@@ -7,5 +7,5 @@ version = "1.2.0"
 observabilityIncluded = true
 
 [[platform.java11.dependency]] 
-path = "./javalibs/kafka-admin-client-0.0.1-SNAPSHOT.jar"
+path = "./javalibs/kafka-admin-client-1.0.0.jar"
 modules = ["inittopic"]
