--- a/consolidator/Ballerina.toml
+++ b/consolidator/Ballerina.toml
@@ -8,6 +8,6 @@ observabilityIncluded = true
 
 [[platform.java11.dependency]]
 modules = ["inittopic"]
-groupId = "com.example"
+groupId = "io.mosip"
 artifactId = "kafka-admin-client"
 version = "1.0.0"
