--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -3,6 +3,8 @@ name: Ballerina Build and push
 on:
   push:
     branches:
+      - '!release-branch'
+      - release-1*
       - develop
       - 1.*
       - websub_scalling
@@ -62,7 +64,11 @@ jobs:
           # Change all uppercase to lowercase
           HUB_IMAGE_ID=$(echo $HUB_IMAGE_ID | tr '[A-Z]' '[a-z]')
           # CONSOLIDATOR_IMAGE_ID=$(echo $CONSOLIDATOR_IMAGE_ID | tr '[A-Z]' '[a-z]')
-          VERSION=$BRANCH_NAME
+          if [[ $BRANCH_NAME == master ]]; then
+            VERSION=latest
+          else
+            VERSION=$BRANCH_NAME
+          fi
           echo "push version $VERSION"
           echo HUB_IMAGE_ID=$HUB_IMAGE_ID
           # echo CONSOLIDATOR_IMAGE_ID=$CONSOLIDATOR_IMAGE_ID
