--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -17,7 +17,7 @@ jobs:
     env: 
       NAMESPACE: ${{ secrets. dev_namespace_docker_hub }}
       SERVICE_NAME: websub-service
-    #  CONSOLIDATOR_SERVICE_NAME: consolidator-websub-service
+      CONSOLIDATOR_SERVICE_NAME: consolidator-websub-service
   
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -42,17 +42,17 @@ jobs:
       - name: Hub-service build
         run: |
          bal build ./hub 
-    #  - name: Consolidator service build
-    #    run: |
-    #     bal build ./consolidator
+      - name: Consolidator service build
+        run: |
+         bal build ./consolidator
          
       - name: Build hub image
         run: |
           docker build ./hub --file ./hub/Dockerfile --tag ${{ env.SERVICE_NAME }}
       
-    #  - name: Build consolidator image
-    #    run: |
-    #      docker build ./consolidator --file ./consolidator/Dockerfile --tag ${{ env.CONSOLIDATOR_SERVICE_NAME }}    
+      - name: Build consolidator image
+        run: |
+          docker build ./consolidator --file ./consolidator/Dockerfile --tag ${{ env.CONSOLIDATOR_SERVICE_NAME }}    
       - name: Log into registry
         run: echo "${{ secrets.release_docker_hub }}" | docker login -u ${{ secrets.actor_docker_hub }} --password-stdin
         
