--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -36,7 +36,7 @@ jobs:
          
       - name: Install ballerina
         run: |
-         wget -q --show-progress https://dist.ballerina.io/downloads/2201.0.0/ballerina-2201.0.0-swan-lake-linux-x64.deb
+         wget -q --show-progress https://dist.ballerina.io/downloads/2201.0.0/ballerina-2201.0.0-swan-lake-linux-x64.deb -O ballerina-linux-installer-x64.deb
          sudo dpkg -i ballerina-linux-installer-x64.deb
       
       - name: Hub-service build
