--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -66,7 +66,7 @@ jobs:
          bal build ./hub 
       - name: Consolidator service build
         run: |
-         cd kafka-admin-client && mvn -B package  --file pom.xml -s $GITHUB_WORKSPACE/settings.xml
+         cd kafka-admin-client && mvn -B clean install --file pom.xml -s $GITHUB_WORKSPACE/settings.xml
          cd ..
          bal build ./consolidator
          
