--- a/consolidator/Dockerfile
+++ b/consolidator/Dockerfile
@@ -1,5 +1,6 @@
 FROM openjdk:11
 ARG consolidator_config_url
+ARG max_heap_size=2048m
 ARG ballerina_download_url=https://dist.ballerina.io/downloads/2201.0.0/ballerina-2201.0.0-swan-lake-linux-x64.deb
 ENV consolidator_config_file_url_env=${consolidator_config_url}
 COPY ./target/bin/*.jar consolidator.jar
@@ -7,4 +8,4 @@ RUN wget -q --show-progress ${ballerina_download_url} -O ballerina-linux-install
 RUN dpkg -i ballerina-linux-installer-x64.deb
 #TODO Link to be parameterized instead of hardcoding
 CMD wget -q --show-progress "${consolidator_config_file_url_env}" -O Config.toml;\
-    bal run ./consolidator.jar ;\
+     java -jar -Xms256m -Xmx${max_heap_size} ./consolidator.jar ;\
