--- a/hub/Ballerina.toml
+++ b/hub/Ballerina.toml
@@ -5,3 +5,9 @@ version = "1.2.1"
 
 [build-options]
 observabilityIncluded = true
+
+[[platform.java11.dependency]]
+modules = ["inittopic"]
+groupId = "io.mosip"
+artifactId = "kafka-admin-client"
+version = "1.2.0.1"
