port 9192 exposed from dockerfile

--- a/consolidator/Dockerfile
+++ b/consolidator/Dockerfile
@@ -4,6 +4,7 @@ ARG max_heap_size=2048m
 ARG ballerina_download_url=https://dist.ballerina.io/downloads/2201.0.0/ballerina-2201.0.0-swan-lake-linux-x64.deb
 ENV consolidator_config_file_url_env=${consolidator_config_url}
 COPY ./target/bin/*.jar consolidator.jar
+EXPOSE 9192
 RUN wget -q --show-progress ${ballerina_download_url} -O ballerina-linux-installer-x64.deb
 RUN dpkg -i ballerina-linux-installer-x64.deb
 #TODO Link to be parameterized instead of hardcoding
