push trigger modified to build admin client before hub
Signed-off-by: Vishwa <visu.vs1@gmail.com>

--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -61,6 +61,8 @@ jobs:
 
       - name: Hub-service build
         run: |
+         cd kafka-admin-client && mvn -B clean install --file pom.xml -s $GITHUB_WORKSPACE/settings.xml
+         cd ..
          bal build ./hub 
       - name: Consolidator service build
         run: |
