--- a/hub/Ballerina.toml
+++ b/hub/Ballerina.toml
@@ -1,7 +1,7 @@
 [package]
 org = "mosip"
 name = "kafkaHub"
-version = "1.2.0.1-SNAPSHOT"
+version = "1.2.0.1"
 
 [build-options]
 observabilityIncluded = true
