--- a/consolidator/Ballerina.toml
+++ b/consolidator/Ballerina.toml
@@ -11,4 +11,4 @@ observabilityIncluded = true
 modules = ["inittopic"]
 groupId = "io.mosip"
 artifactId = "kafka-admin-client"
-version = "1.2.0.1"
+version = "1.2.0.1-SNAPSHOT"
