[DSD-3932] removed release-changes.yml, tag.yml and updated push-trigger.yml file
Signed-off-by: techno-467 <prafulrakhade02@gmail.com>

--- a/.github/workflows/push-trigger.yml
+++ b/.github/workflows/push-trigger.yml
@@ -4,7 +4,7 @@ on:
   release:
     types: [published]
   pull_request:
-    types: [opened]
+    types: [opened, reopened, synchronize]
     branches:
       - '!release-branch'
       - release-1*
@@ -40,7 +40,7 @@ jobs:
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
 
   publish-to-nexus-kafka-admin-client:
-    if: "${{ !contains(github.ref, 'master') && github.event_name != 'pull_request' }}"
+    if: "${{ !contains(github.ref, 'master') && github.event_name != 'pull_request' && github.event_name != 'release' && github.event_name != 'prerelease' && github.event_name != 'publish' }}"
     needs: build-kafka-admin-client
     uses: mosip/kattu/.github/workflows/maven-publish-to-nexus.yml@master
     with:
