--- a/consolidator/Ballerina.toml
+++ b/consolidator/Ballerina.toml
@@ -1,7 +1,7 @@
 [package]
 org = "mosip"
 name = "consolidatorService"
-version = "1.2.1-SNAPSHOT"
+version = "1.2.1"
 
 
 [build-options]
@@ -11,5 +11,5 @@ observabilityIncluded = true
 modules = ["inittopic"]
 groupId = "io.mosip"
 artifactId = "kafka-admin-client"
-version = "1.2.1-SNAPSHOT"
-path = "kafka-admin-client/target/kafka-admin-client-1.2.1-SNAPSHOT.jar"
+version = "1.2.1"
+path = "kafka-admin-client/target/kafka-admin-client-1.2.1.jar"
