--- a/kafka-admin-client/pom.xml
+++ b/kafka-admin-client/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>io.mosip</groupId>
 	<artifactId>kafka-admin-client</artifactId>
-	<version>1.2.0.1-B2</version>
+	<version>1.2.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>kafka-admin-client</name>
