--- a/hub/Ballerina.toml
+++ b/hub/Ballerina.toml
@@ -10,5 +10,5 @@ observabilityIncluded = true
 modules = ["inittopic"]
 groupId = "io.mosip"
 artifactId = "kafka-admin-client"
-version = "1.2.0.1-B2"
-path = "kafka-admin-client/target/kafka-admin-client-1.2.0.1-B2.jar"
+version = "1.2.0.1-SNAPSHOT"
+path = "kafka-admin-client/target/kafka-admin-client-1.2.0.1-SNAPSHOT.jar"
