--- a/consolidator/Ballerina.toml
+++ b/consolidator/Ballerina.toml
@@ -1,7 +1,7 @@
 [package]
 org = "mosip"
 name = "consolidatorService"
-version = "1.2.0-patch1beta.2"
+version = "1.2.0-patch.1"
 
 
 [build-options]
