--- a/consolidator/Dockerfile
+++ b/consolidator/Dockerfile
@@ -17,6 +17,10 @@ ARG max_heap_size=2048m
 ARG ballerina_download_url=https://dist.ballerina.io/downloads/2201.0.0/ballerina-2201.0.0-swan-lake-linux-x64.deb
 ENV consolidator_config_file_url_env=${consolidator_config_url}
 
+# Create a user and group with specified UID and GID
+RUN groupadd -r -g ${container_user_gid} ${container_user_group} && \
+    useradd -r -u ${container_user_uid} -g ${container_user_group} ${container_user}
+
 WORKDIR /home/${container_user}
 
 COPY ./target/bin/*.jar consolidator.jar
@@ -25,9 +29,6 @@ RUN wget -q --show-progress ${ballerina_download_url} -O ballerina-linux-install
 && dpkg -i ballerina-linux-installer-x64.deb \
 && chown -R ${container_user}:${container_user} /home/${container_user}
 #TODO Link to be parameterized instead of hardcoding
-USER ${container_user_uid}:${container_user_gid}
+USER ${container_user}
 CMD wget -q --show-progress "${consolidator_config_file_url_env}" -O Config.toml;\
-     java -jar -Xms256m -Xmx2048m ./consolidator.jar ;\
-
-
-
+     java -jar -Xms256m -Xmx${max_heap_size} ./consolidator.jar ;
