--- a/consolidator/Dockerfile
+++ b/consolidator/Dockerfile
@@ -17,15 +17,13 @@ ARG max_heap_size=2048m
 ARG ballerina_download_url=https://dist.ballerina.io/downloads/2201.0.0/ballerina-2201.0.0-swan-lake-linux-x64.deb
 ENV consolidator_config_file_url_env=${consolidator_config_url}
 
-# Create a user and group with specified UID and GID
-RUN groupadd -r -g ${container_user_gid} ${container_user_group} && \
-    useradd -r -u ${container_user_uid} -g ${container_user_group} ${container_user}
-
 WORKDIR /home/${container_user}
 
 COPY ./target/bin/*.jar consolidator.jar
 EXPOSE 9192
-RUN wget -q --show-progress ${ballerina_download_url} -O ballerina-linux-installer-x64.deb \
+RUN groupadd -r -g ${container_user_gid} ${container_user_group} \
+&&  useradd -r -u ${container_user_uid} -g ${container_user_group} ${container_user} \
+&& wget -q --show-progress ${ballerina_download_url} -O ballerina-linux-installer-x64.deb \
 && dpkg -i ballerina-linux-installer-x64.deb \
 && chown -R ${container_user}:${container_user} /home/${container_user}
 #TODO Link to be parameterized instead of hardcoding
