--- a/consolidator/Dockerfile
+++ b/consolidator/Dockerfile
@@ -17,8 +17,8 @@ ARG max_heap_size=2048m
 ARG min_heap_size=256m
 ARG ballerina_download_url=https://dist.ballerina.io/downloads/2201.0.0/ballerina-2201.0.0-swan-lake-linux-x64.deb
 ENV consolidator_config_file_url_env=${consolidator_config_url}
-ENV max_heap_size=${MAX_HEAP_SIZE}
-ENV min_heap_size=${MIN_HEAP_SIZE}
+ENV max_heap_size=${max_heap_size}
+ENV min_heap_size=${min_heap_size}
 
 
 WORKDIR /home/${container_user}
