--- a/hub/Ballerina.toml
+++ b/hub/Ballerina.toml
@@ -1,14 +1,14 @@
 [package]
 org = "mosip"
 name = "kafkaHub"
-version = "1.2.1-SNAPSHOT"
+version = "1.2.1-java21-SNAPSHOT"
 
 [build-options]
 observabilityIncluded = true
 
-[[platform.java11.dependency]]
+[[platform.java21.dependency]]
 modules = ["inittopic"]
 groupId = "io.mosip"
 artifactId = "kafka-admin-client"
-version = "1.2.1-SNAPSHOT"
-path = "kafka-admin-client/target/kafka-admin-client-1.2.1-SNAPSHOT.jar"
+version = "1.2.1-java21-SNAPSHOT"
+path = "kafka-admin-client/target/kafka-admin-client-1.2.1-java21-SNAPSHOT.jar"
