MOSIP-32454: Dockerfile changes
Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>

--- a/hub/Dockerfile
+++ b/hub/Dockerfile
@@ -14,7 +14,7 @@ ENV hub_config_file_url_env=${hub_config_url}
 COPY ./target/bin/*.jar hub.jar
 EXPOSE 9191
 RUN apk add --no-cache wget && wget -q --show-progress ${ballerina_download_url} -O ballerina-linux-installer-x64.deb
-RUN dpkg -i ballerina-linux-installer-x64.deb
+RUN apk add --no-cache dpkg && dpkg -i ballerina-linux-installer-x64.deb
 #TODO Link to be parameterized instead of hardcoding
 CMD wget -q --show-progress "${hub_config_file_url_env}" -O Config.toml;\
     java -jar -Xms256m -Xmx2048m ./hub.jar ;\
