--- a/consolidator/Dockerfile
+++ b/consolidator/Dockerfile
@@ -15,7 +15,7 @@ ENV consolidator_config_file_url_env=${consolidator_config_url}
 COPY ./target/bin/*.jar consolidator.jar
 EXPOSE 9192
 RUN apk add --no-cache wget && wget -q --show-progress ${ballerina_download_url} -O ballerina-linux-installer-x64.deb
-RUN dpkg -i ballerina-linux-installer-x64.deb
+RUN apk add --no-cache dpkg && dpkg -i ballerina-linux-installer-x64.deb
 #TODO Link to be parameterized instead of hardcoding
 CMD wget -q --show-progress "${consolidator_config_file_url_env}" -O Config.toml;\
      java -jar -Xms256m -Xmx2048m ./consolidator.jar ;\
