MOSIP-32454: Dockerfile changes
Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>

--- a/consolidator/Dockerfile
+++ b/consolidator/Dockerfile
@@ -1,4 +1,4 @@
-FROM eclipse-temurin:17-jre-alpine
+FROM openjdk:17
 
 ARG SOURCE
 ARG COMMIT_HASH
@@ -14,7 +14,10 @@ ARG ballerina_download_url=https://dist.ballerina.io/downloads/2201.8.6/ballerin
 ENV consolidator_config_file_url_env=${consolidator_config_url}
 COPY ./target/bin/*.jar consolidator.jar
 EXPOSE 9192
-RUN apk add -q wget dpkg zstd
+RUN microdnf update \
+ && microdnf install --nodocs wget unzip \
+ && microdnf clean all \
+ && rm -rf /var/cache/yum
 RUN wget -q --show-progress ${ballerina_download_url} -O ballerina-linux-installer-x64.deb
 RUN dpkg --add-architecture amd64
 RUN dpkg -i ballerina-linux-installer-x64.deb
