Reverting last commit
Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>

--- a/.github/workflows/push-trigger.yml
+++ b/.github/workflows/push-trigger.yml
@@ -71,6 +71,7 @@ jobs:
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
 
   build-consolidator:
+    needs: build-kafka-admin-client
     env:
       SERVICE_LOCATION: 'consolidator'
       BUILD_ARTIFACT: 'consolidator'
