[DSD-5599]Update pom.xml
Signed-off-by: Mahesh-Binayak <76687012+Mahesh-Binayak@users.noreply.github.com>
Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>

--- a/kafka-admin-client/pom.xml
+++ b/kafka-admin-client/pom.xml
@@ -136,6 +136,12 @@
 						<goals>
 							<goal>report-aggregate</goal>
 						</goals>
+						<configuration>
+						    <outputDirectory>${project.build.directory}/site/jacoco-aggregate</outputDirectory>
+                                                    <reportFormats>
+                                                        <reportFormat>XML</reportFormat>
+                                                    </reportFormats>
+					        </configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -248,7 +254,7 @@
 			<properties>
 				<sonar.sources>.</sonar.sources>
 				<sonar.inclusions>src/main/java/**,src/main/resources/**</sonar.inclusions>
-				<sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco-aggregate/</sonar.coverage.jacoco.xmlReportPaths>
+				<sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 				<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 			</properties>
 			<activation>
